[INFER] Drop type information for GNAME ops in debug-mode compartments, bug 652142.